--- a/src/pages/signup.css
+++ b/src/pages/signup.css
@@ -1,8 +1,8 @@
 .home-container {
   background: url("https://assets.nflxext.com/ffe/siteui/vlv3/729ce5c2-d831-436a-8c9d-f38fea0b99b3/web/IN-en-20241209-TRIFECTA-perspective_4aef76eb-7d5b-4be0-93c0-5f67320fd878_large.jpg");
   height: 100vh;
-  width: 100%;
-  
+  width:100%;
+
   background-color: rgb(48, 48, 48);
   z-index: 1;
   /* background: linear-gradient(
@@ -36,39 +36,141 @@
   z-index: 1;
 }
 .background-color {
- position: absolute;
+  position: absolute;
   height: 100vh;
   width: 97vw;
   background: black;
- opacity: 0.7;
+  opacity: 0.6;
   /* z-index: 0; */
 }
 
 .logo a svg {
   width: 148px;
   height: auto;
-  margin-top: 30px;
-  margin-left: 100px;
 }
 
 
-.signin-card{
-     position:relative;
-    height: 80vh;
-    width: 32vw;
-    background-color: black;
-     opacity: 0.6;
-   margin-left: 440px;
-   margin-top: 30px;
-    color: white; 
-    padding: 10px; 
-    z-index: 0;
-    
+.signin-box {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 30px;
+  border-radius: 10px;
+  width: 380px;
+  text-align: center;
+  margin-left: 30px;
+   font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
+    sans-serif;
+    margin-top: 170px;
 }
 
+.signin-box h2 {
+  margin-bottom: 20px;
+  color: #fff;
+  text-align: start;
+  font-size: 32px;
+  font-weight: 700;
+  margin-left: 20px;
+}
 
-.title{
-    color: #fff;
-    font-weight: 700;
-   
+form input {
+  width: 100%;
+  padding: 10px;
+  margin: 12px 0;
+  height: 6vh;
+  width: 23vw;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  background-color: transparent;
+  border: 1px solid rgb(156, 152, 152);
+  color: #cfc9c9;
+}
+
+form button {
+  background-color: rgb(184, 14, 14);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 17px;
+  font-weight: 600;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
+  width: 24.5vw;
+}
+
+form button:hover {
+  background-color: darkred;
+}
+
+.extra-links a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  margin: 10px 0;
+}
+
+.code-btn {
+  background-color: #555;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  width: 100%;
+  width: 24.5vw;
+  height: 8vh;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.code-btn:hover {
+  background-color: #333;
+}
+
+.checkbox-container{
+  margin-right: 170px;
+   display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+
+  
+  font-size: 16px;
+ 
+
+}
+
+.checkbox-input{
+display: none;
+margin-top: 10px;
+}
+.checkbox-custom{
+  width: 14px;
+  height: 14px;
+  border: 2px solid #e1e4e7;
+  border-radius: 4px;
+  background-color:transparent;
+  margin-right: 10px;
+   position: relative;
+
+}
+
+.para{
+  margin-right: 100px;
+}
+
+.para1{
+  margin-left: 40px;
+  text-align: start;
+  font-size: 12px;
+  color: #cfc9c9;
+}
+
+.footer-background{
+  background-color: black;
+  height: auto;
+  width: 100vw;
+  margin-top: -10px;
+  padding-top: 240px;
 }
